--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.12",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.3.4",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -16,10 +19,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-progress-dialog": "^0.0.5",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
